02-databases/01-db-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fintech-databases
  labels:
    tier: database
    project: fintech
