02-databases/06-db-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-db-isolation
  namespace: fintech-databases
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: fintech-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              cnpg.io/cluster: fintech-db
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 8000

    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
      ports:
        - protocol: TCP
          port: 8000

    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: fintech-apps
          podSelector:
            matchExpressions:
              - key: app
                operator: In
                values: ["fintech-consumer", "fintech-db-cleaner"]
      ports:
        - protocol: TCP
          port: 5432

    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: fintech-monitoring
      ports:
        - protocol: TCP
          port: 9187
